optimize joi, route, swagger and create job by agenda
