# logs/swagger_output.json
@@ -1,116 +1,168 @@
 {
   "openapi": "3.0.0",
   "info": {
-    "version": "v1.0.0",
-    "title": "Nodejs Training Project",
-    "description": ""
+    "title": "Nodejs Training API",
+    "version": "1.0.0",
+    "description": "API for creating and managing users"
   },
   "servers": [
     {
       "url": "http://localhost:3000",
-      "description": ""
+      "description": "Local server"
     }
   ],
   "paths": {
-    "/user/": {
+    "/user": {
       "get": {
-        "description": "",
+        "summary": "This endpoint allows you to get all users",
+        "description": "Get all users in user table",
         "responses": {
-          "200": {
-            "description": "OK"
+          "201": {
+            "description": "Get users successfully"
           }
         }
       },
       "post": {
-        "description": "",
+        "summary": "Create a new user",
+        "description": "This endpoint allows you to create a new user.",
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "name": {
+                    "type": "string",
+                    "example": "Uchiha Itachi"
+                  },
+                  "email": {
+                    "type": "string",
+                    "example": "itachi@uchiha.com"
+                  },
+                  "phone": {
+                    "type": "string",
+                    "example": "03367876621"
+                  },
+                  "password": {
+                    "type": "string",
+                    "example": "thisispassword"
+                  }
+                },
+                "required": [
+                  "name",
+                  "email",
+                  "phone",
+                  "password"
+                ]
+              }
+            }
+          }
+        },
         "responses": {
           "201": {
-            "description": "Created"
+            "description": "User created successfully"
           },
           "400": {
-            "description": "Bad Request"
+            "description": "error message"
           }
         }
       }
     },
     "/user/{id}": {
       "get": {
-        "description": "",
+        "summary": "This endpoint allows you to get a user by id",
+        "description": "Get user by id",
         "parameters": [
           {
-            "name": "id",
             "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
+            "name": "id",
+            "required": true
           }
         ],
         "responses": {
-          "200": {
-            "description": "OK"
+          "201": {
+            "description": "Get user successfully"
           },
           "404": {
-            "description": "Not Found"
+            "description": "User not found"
           }
         }
       },
       "put": {
-        "description": "",
+        "summary": "Edit a new user",
+        "description": "This endpoint allows you to edit a new user.",
         "parameters": [
           {
-            "name": "id",
             "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
+            "name": "id",
+            "required": true
           }
         ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "name": {
+                    "type": "string",
+                    "example": "Uchiha Itachi"
+                  },
+                  "email": {
+                    "type": "string",
+                    "example": "itachi@uchiha.com"
+                  },
+                  "phone": {
+                    "type": "string",
+                    "example": "03367876621"
+                  },
+                  "password": {
+                    "type": "string",
+                    "example": "thisispassword"
+                  }
+                },
+                "required": [
+                  "name",
+                  "email",
+                  "phone",
+                  "password"
+                ]
+              }
+            }
+          }
+        },
         "responses": {
-          "200": {
-            "description": "OK"
+          "201": {
+            "description": "User Edited successfully"
           },
           "400": {
-            "description": "Bad Request"
-          },
-          "404": {
-            "description": "Not Found"
+            "description": "Invalid input"
           }
         }
       },
       "delete": {
-        "description": "",
+        "summary": "Delete a user",
+        "description": "This endpoint allows you to delete a user.",
         "parameters": [
           {
-            "name": "id",
             "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
+            "name": "id",
+            "required": true
           }
         ],
         "responses": {
-          "200": {
-            "description": "OK"
+          "201": {
+            "description": "User deleted successfully"
           },
           "400": {
-            "description": "Bad Request"
-          },
-          "404": {
-            "description": "Not Found"
+            "description": "Invalid input"
           }
         }
       }
     }
   },
-  "components": {
-    "securitySchemes": {
-      "bearerAuth": {
-        "type": "http",
-        "scheme": "bearer"
-      }
-    }
-  }
+  "components": {},
+  "tags": []
 }
